--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
   <groupId>io.ti</groupId>
   <artifactId>ti-rpc</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>annotation</module>
+  </modules>
 
 
   <properties>
